--- a/recipes/templates/recipes/recipe_list.html
+++ b/recipes/templates/recipes/recipe_list.html
@@ -21,6 +21,8 @@
         margin-bottom: 2rem;
         display: flex;
         gap: 0.75rem;
+        margin-top: 2rem;
+
     }
 
     .search-bar input {
